[gd_scene load_steps=13 format=3 uid="uid://c4qlisnrry8tx"]

[ext_resource type="Script" uid="uid://clp63cu584b8" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Shader" uid="uid://nn20f4l2d3f2" path="res://wireframe.gdshader" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://y3dhphlegysh" path="res://camera_3d.gd" id="3_h2yge"]

[sub_resource type="SphereMesh" id="SphereMesh_h2yge"]
flip_faces = true
radial_segments = 16
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
transparency = 1
cull_mode = 1
albedo_color = Color(0, 0.78431374, 1, 0.5019608)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bvp3"]
render_priority = 0
shader = ExtResource("2_1bvp3")
shader_parameter/wireframe_color = Color(0, 0.8001019, 1, 0.4)
shader_parameter/offset = 0.002
shader_parameter/alpha = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
next_pass = SubResource("ShaderMaterial_1bvp3")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_0xm2m"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ig7tw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lquwl"]

[sub_resource type="Sky" id="Sky_7mycd"]
sky_material = SubResource("ProceduralSkyMaterial_lquwl")

[sub_resource type="Environment" id="Environment_lquwl"]
background_mode = 2
sky = SubResource("Sky_7mycd")

[node name="Main" type="Node3D"]
script = ExtResource("1_0xm2m")
sphere_radial_segments = 16
sphere_rings = 8

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("cam_target")]
script = ExtResource("3_h2yge")
cam_target = NodePath("../Sculpture")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainerTL" type="MarginContainer" parent="UI"]
layout_mode = 1
offset_right = 17.0
offset_bottom = 39.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="Container" type="VBoxContainer" parent="UI/MarginContainerTL"]
layout_mode = 2

[node name="Timings" type="RichTextLabel" parent="UI/MarginContainerTL/Container"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MarginContainerTR" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 39.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="Container" type="VBoxContainer" parent="UI/MarginContainerTR"]
layout_mode = 2

[node name="FPS" type="Label" parent="UI/MarginContainerTR/Container"]
layout_mode = 2
text = "FPS: 145.0
"
horizontal_alignment = 2

[node name="ResetButton" type="Button" parent="UI/MarginContainerTR/Container"]
layout_mode = 2
text = "Reset model"

[node name="MarginContainerBL" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -216.0
offset_right = 127.0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 16

[node name="Container" type="VBoxContainer" parent="UI/MarginContainerBL"]
layout_mode = 2

[node name="TitleStatue" type="Label" parent="UI/MarginContainerBL/Container"]
layout_mode = 2
text = "Model:"

[node name="StatsStatue" type="Label" parent="UI/MarginContainerBL/Container"]
layout_mode = 2

[node name="WireframeStatue" type="CheckBox" parent="UI/MarginContainerBL/Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Wireframe"

[node name="Title" type="Label" parent="UI/MarginContainerBL/Container"]
layout_mode = 2
text = "Particles:"

[node name="Stats" type="Label" parent="UI/MarginContainerBL/Container"]
layout_mode = 2

[node name="Wireframe" type="CheckBox" parent="UI/MarginContainerBL/Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Wireframe"

[node name="MarginContainerBR" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -276.0
offset_top = -39.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Info" type="Label" parent="UI/MarginContainerBR"]
layout_mode = 2
text = "LMB: apply tool
MMB: orbit
Mouse wheel (+ shift): zoom (resize tool)"
horizontal_alignment = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.932362, 0.09704656, 0.3482572, 0.22308776, -0.6035845, 0.76545256, 0.2844872, 0.79137075, 0.5411094, 0, 0, 0)
shadow_enabled = true

[node name="Tool" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_h2yge")
surface_material_override/0 = SubResource("StandardMaterial3D_h2yge")

[node name="Sculpture" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.034678936, 0)
material_override = SubResource("StandardMaterial3D_1bvp3")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("WorldBoundaryShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
mesh = SubResource("PlaneMesh_ig7tw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lquwl")

[connection signal="toggled" from="UI/MarginContainerBL/Container/WireframeStatue" to="." method="_on_wireframe_toggled"]
[connection signal="toggled" from="UI/MarginContainerBL/Container/Wireframe" to="." method="_on_wireframe_toggled_particles"]
